# obsidian-album-propogator

./: Cargo.toml  README.md
src/: app.rs  config.rs  library.rs  main.rs  notes.rs
src/api/: musicbrainz.rs
src/models/: album.rs  artist.rs  library.rs  mod.rs
src/tasks/: cover_art.rs
src/templates/: note_template.md
src/tui/: controller.rs  mod.rs  state.rs  ui.rs
templates/: note_template.md
